--- a/MMSongQuizz/app/src/main/res/layout/activity_question.xml
+++ b/MMSongQuizz/app/src/main/res/layout/activity_question.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -8,190 +10,298 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.remy.mmsongquizz.activities.QuestionActivity">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:id="@+id/questionMessageText"
-        android:layout_below="@+id/questionSubmitBtn"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Question.."
-        android:id="@+id/questionTextView"
-        android:layout_below="@+id/compteurQuestionLayout"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="36dp" />
-
-    <TextView
+    <ScrollView
+        android:id="@+id/question_scrollS"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/questionResponseInput"
-        android:layout_below="@+id/dynamicLayout"
-        android:layout_centerHorizontal="true"
-        android:height="30dp"
-        android:textSize="20dp" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Valider"
-        android:id="@+id/questionSubmitBtn"
-        android:layout_below="@+id/questionResponseInput"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="26dp" />
+        android:layout_height="match_parent">
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/questionSubmitBtn"
-        android:id="@+id/lettreLayout">
+        android:layout_height="match_parent">
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/compteurQuestionLayout"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="false">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/compteurQuestion"
+                android:layout_alignParentTop="true"
+                android:layout_alignRight="@+id/player_layout"
+                android:layout_alignEnd="@+id/player_layout"
+                android:layout_gravity="right|center_vertical" />
+
+        </FrameLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Question.."
+            android:id="@+id/questionTextView"
+            android:layout_below="@+id/compteurQuestionLayout"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/dynamicLayout"
+            android:layout_below="@+id/questionTextView">
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/questionTextView"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="10dp"
+                android:id="@+id/player_layout"
+                android:weightSum="1"
+                android:background="#00ffffff">
+
+                <ImageButton
+                    android:layout_width="55dp"
+                    android:layout_height="55dp"
+                    android:id="@+id/question_play_button"
+                    android:src="@mipmap/play"
+                    android:scaleType="fitXY"
+                    android:background="@null"/>
+
+                <ImageButton
+                    android:layout_width="55dp"
+                    android:layout_height="55dp"
+                    android:id="@+id/question_restart_button"
+                    android:src="@mipmap/restart"
+                    android:scaleType="fitXY"
+                    android:background="@null"/>
+            </LinearLayout>
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentTop="true"
+                android:layout_toRightOf="@+id/questionMessageText"
+                android:layout_toEndOf="@+id/questionMessageText"
+                android:id="@+id/webviewLayout">
+
+                <WebView  xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:id="@+id/ImageWebview"
+                    android:layout_width="fill_parent"
+                    android:layout_height="192dp"
+                    android:layout_gravity="center" />
+
+            </FrameLayout>
+        </LinearLayout>
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/ligne1"
+            android:id="@+id/responseLayout"
             android:gravity="center"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/questionResponseInput"
+                android:layout_below="@+id/dynamicLayout"
+                android:layout_centerHorizontal="true"
+                android:height="30dp"
+                android:textSize="20dp"
+                android:textAlignment="center"
+                android:letterSpacing="0.1"
+                android:layout_marginLeft="95dp" />
+
+            <ImageButton
+
+                android:layout_width="50dp"
+                android:layout_height="30dp"
+                android:id="@+id/question_clearBtn"
+                android:src="@mipmap/clearbutton"
+                android:scaleType="fitXY"
+                android:background="@null"
+                android:layout_marginRight="50dp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal">
 
-            <LinearLayout
-                android:orientation="horizontal"
+            <Button
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content"
+                android:text="Valider"
+                android:id="@+id/questionSubmitBtn"
+                android:layout_below="@+id/questionResponseInput"
+                android:layout_centerHorizontal="true"
+                android:background="#6cbb5e" />
 
-                <Button
-                    style="?android:attr/buttonStyleSmall"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text=" "
-                    android:id="@+id/button1"
-                    android:textAlignment="center" />
-
-                <Button
-                    style="?android:attr/buttonStyleSmall"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text=" "
-                    android:id="@+id/button2"
-                    android:textAlignment="center" />
-
-                <Button
-                    style="?android:attr/buttonStyleSmall"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text=" "
-                    android:id="@+id/button3"
-                    android:textAlignment="center" />
-
-                <Button
-                    style="?android:attr/buttonStyleSmall"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text=" "
-                    android:id="@+id/button4"
-                    android:textAlignment="center" />
-
-                <Button
-                    style="?android:attr/buttonStyleSmall"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text=" "
-                    android:id="@+id/button5"
-                    android:textAlignment="center" />
-
-                <Button
-                    style="?android:attr/buttonStyleSmall"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text=" "
-                    android:id="@+id/button6"
-                    android:textAlignment="center" />
-            </LinearLayout>
-
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Indice"
+                android:id="@+id/question_indiceBtn"
+                android:background="#ddd341" />
         </LinearLayout>
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/ligne2"></LinearLayout>
-    </LinearLayout>
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:id="@+id/compteurQuestionLayout"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="false">
-
-        <TextView
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/compteurQuestion"
-            android:layout_alignParentTop="true"
-            android:layout_alignRight="@+id/player_layout"
-            android:layout_alignEnd="@+id/player_layout"
-            android:layout_gravity="right|center_vertical" />
-    </FrameLayout>
+            android:layout_below="@+id/questionSubmitBtn"
+            android:id="@+id/lettreLayout">
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/dynamicLayout"
-        android:layout_below="@+id/questionTextView">
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/ligne1"
+                android:gravity="center"
+                android:layout_gravity="center_horizontal">
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/questionTextView"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="10dp"
-            android:id="@+id/player_layout"
-            android:weightSum="1"
-            android:background="#00ffffff">
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent">
 
-            <ImageButton
-                android:layout_width="55dp"
-                android:layout_height="55dp"
-                android:id="@+id/question_play_button"
-                android:src="@mipmap/play"
-                android:scaleType="fitXY"
-                android:background="@null"/>
+                    <Button
+                        style="?android:attr/buttonStyleSmall"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text=" "
+                        android:id="@+id/button1"
+                        android:textAlignment="center" />
 
-            <ImageButton
-                android:layout_width="55dp"
-                android:layout_height="55dp"
-                android:id="@+id/question_restart_button"
-                android:src="@mipmap/restart"
-                android:scaleType="fitXY"
-                android:background="@null"/>
+                    <Button
+                        style="?android:attr/buttonStyleSmall"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text=" "
+                        android:id="@+id/button2"
+                        android:textAlignment="center" />
+
+                    <Button
+                        style="?android:attr/buttonStyleSmall"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text=" "
+                        android:id="@+id/button3"
+                        android:textAlignment="center" />
+
+                    <Button
+                        style="?android:attr/buttonStyleSmall"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text=" "
+                        android:id="@+id/button4"
+                        android:textAlignment="center" />
+
+                    <Button
+                        style="?android:attr/buttonStyleSmall"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text=" "
+                        android:id="@+id/button5"
+                        android:textAlignment="center" />
+
+                    <Button
+                        style="?android:attr/buttonStyleSmall"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text=" "
+                        android:id="@+id/button6"
+                        android:textAlignment="center" />
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/ligne2">
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/linearLayout"
+                    android:gravity="center"
+                    android:layout_gravity="center_horizontal" >
+
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent" >
+
+                        <Button
+                            style="?android:attr/buttonStyleSmall"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text=" "
+                            android:id="@+id/button7"
+                            android:textAlignment="center" />
+
+                        <Button
+                            style="?android:attr/buttonStyleSmall"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text=" "
+                            android:id="@+id/button8"
+                            android:textAlignment="center" />
+
+                        <Button
+                            style="?android:attr/buttonStyleSmall"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text=" "
+                            android:id="@+id/button9"
+                            android:textAlignment="center" />
+
+                        <Button
+                            style="?android:attr/buttonStyleSmall"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text=" "
+                            android:id="@+id/button10"
+                            android:textAlignment="center" />
+
+                        <Button
+                            style="?android:attr/buttonStyleSmall"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text=" "
+                            android:id="@+id/button11"
+                            android:textAlignment="center" />
+
+                        <Button
+                            style="?android:attr/buttonStyleSmall"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text=" "
+                            android:id="@+id/button12"
+                            android:textAlignment="center" />
+                    </LinearLayout>
+                </LinearLayout>
+            </LinearLayout>
         </LinearLayout>
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/questionMessageText"
-            android:layout_toEndOf="@+id/questionMessageText">
-
-            <WebView  xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/ImageWebview"
-                android:layout_width="fill_parent"
-                android:layout_height="192dp"
-                android:layout_gravity="center" />
-
-        </FrameLayout>
     </LinearLayout>
-</RelativeLayout>
+    </ScrollView>
+</LinearLayout>
+
